<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SPS</string>
    
    <string name="title_activity_home">Home</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_edit_profil">Edit Profil</string>
    <string name="title_activity_categories">Categories</string>
    <string name="title_activity_project_detail">Project Details</string>
    <string name="title_activity_manage_error">Manage Error</string>
    
    <string name="tab_title_home">Home</string>
    <string name="tab_title_categories">Categories</string>
    <string name="tab_title_new_project">New Project</string>
    
    <string name="menu_about">About</string>
    <string name="menu_login">Login</string>
    <string name="menu_register">Register</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_profil">My profil</string>
    <string name="menu_logout">Logout</string>
    
    <string name="button_ok">OK</string>
    <string name="button_quit">Quit</string>
    <string name="button_cancel">Cancel</string>
    
    <string name="alert_oops">Oops !</string>
    <string name="alert_no_connection">It seem that your smartphone is not connected to internet. 
        		This application cannot work without network connectivity.
        		Click OK to retry in 10sec, or quit this app for the moment.</string>
    <string name="alert_login_error">An error occurred, please verify your identifiers and try again.</string>
    <string name="alert_error">Error !</string>
    <string name="alert_null_contribution">Your contribution must have an amount > 0.</string>
    <string name="alert_thanks">Thanks !</string>
    <string name="alert_contribution_ok">Your contribution has been treated.</string>
    <string name="alert_warning">Warning !</string>
    <string name="alert_leaving_application">By doing this, you will leave this application.</string>
    
    <string name="home_header">Currently on\nSup Project Starter</string>
    <string name="home_header_oneline">Currently on Sup Project Starter</string>
    <string name="home_header_no_projects">There is no projects currently.</string>
    
    <string name="detail_creator_title">Creator : </string>
    <string name="detail_sdate_title">Created : </string>
    <string name="detail_edate_title">Ends : </string>
    <string name="detail_success">This project is a success.</string>
    
    <string name="contribute_hint">xxxx €</string>
    <string name="contribute_button">Contribute</string>
    
    <string name="login_email_header">Mail address</string>
    <string name="login_password_header">Password</string>
    <string name="login_button">Login</string>
    <string name="login_register">New to SPS ?\nRegister here</string>
    <string name="login_register_oneline">New to SPS ? Register here</string>
    
    <string name="register_title_header">Register on SPS</string>
    <string name="register_button">Register</string>
    
    <string name="user_email_header">Mail address</string>
    <string name="user_name_header">Name</string>
    <string name="user_firstname_header">Firstname</string>
    <string name="user_password_header">Password</string>
    <string name="user_confirmation_header">Confirmation</string>
    
    <string name="edit_profil_title_header">Edit your profil</string>
    <string name="edit_profil_button">Edit</string>
    
    <string name="categories_spinner_header">- Categories -</string>
    
    <string name="create_project_title_header">Create a project</string>
    <string name="create_project_name_header">Name</string>
    <string name="create_project_description_header">Description</string>
    <string name="create_project_amount_header">Amount to reach</string>
    <string name="create_project_date_start_header">Date/hour start</string>
    <string name="create_project_date_end_header">Date/hour end</string>
    <string name="create_project_b">Create</string>
    <string name="create_project_datetime_hint">dd/MM/yyyy HH:mm</string>

    <!-- REST URIs -->

    <string name="uriProjects">http://10.0.2.2:8080/SPS/rest/projects/</string>
    <string name="uriUsers">http://10.0.2.2:8080/SPS/rest/users/</string>
    <string name="uriCategories">http://10.0.2.2:8080/SPS/rest/categories/</string>
    <string name="uriContributions">http://10.0.2.2:8080/SPS/rest/contributions/</string>
    <string name="uriGroups">http://10.0.2.2:8080/SPS/rest/groups/</string>

    <!-- CONFIRMATION MESSSAGES -->
    <string name="ER_200">You are logged in.</string>
    <string name="ER_201">Sign in successful, welcome.</string>
    <string name="ER_202">Profil edited.</string>
    <string name="ER_203">Project added.</string>

    <!-- ERRORS MESSAGES : LOGIN -->
    <string name="ER_500">Login failed.</string>
    <string name="ER_501">Login failed : an error has occurred, try again soon.</string>
    <string name="ER_502">Wrong password.</string>
    <string name="ER_503">Email incorrect.</string>
    <string name="ER_504">No account linked to this email.</string>
    <string name="ER_505">Enter an email.</string>
    <string name="ER_506">The password must contain at least 3 characters.</string>
    <string name="ER_507">Enter your password.</string>

    <!-- ERRORS MESSAGES : REGISTER -->
    <string name="ER_508">Sign in failed.</string>
    <string name="ER_509">Sign in failed : an error has occurred, try again soon.</string>
    <string name="ER_510">Email already used.</string>
    <string name="ER_511">Passwords have to be the same.</string>
    <string name="ER_512">Enter the passwords.</string>
    <string name="ER_513">Your name must contain at least 3 characters.</string>
    <string name="ER_514">Your firstname must contain at least 3 characters.</string>

    <!-- ERRORS MESSAGES : EDIT PROFIL -->
    <string name="ER_515">Edit profil failed.</string>
    <string name="ER_516">Edit profil failed : an error has occurred, try again soon.</string>

    <!-- ERRORS MESSAGES : ADD PROJECT -->
    <string name="ER_517">Fail, project not added.</string>
    <string name="ER_518">Project not added : an error has occurred, try again soon.</string>
    <string name="ER_519">You have to select a category.</string>
    <string name="ER_522">The name must contain at least 3 characters.</string>
    <string name="ER_523">This name already exist, choose a different name.</string>
    <string name="ER_524">Enter the amount.</string>
    <string name="ER_525">The amount isn\'t correct.</string>
    <string name="ER_526">The description must contain at least 10 characters.</string>
    <string name="ER_527">Enter a start date.</string>
    <string name="ER_528">Enter an end date.</string>
    <string name="ER_529">The end date must be smaller to start date.</string>
    <string name="ER_530">Enter a correct start date.</string>
    <string name="ER_531">Enter a correct end date.</string>
    <string name="ER_532">An admin can\'t add projects here, use the website.</string>
        
    <string name="title_activity_tab_host">TabHostActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_create_project">CreateProjectActivity</string>
    <string name="title_activity_category_detail">CategoryDetailActivity</string>

</resources>
