<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context=".RegisterActivity" >
    
    <RelativeLayout 
		android:id="@+id/detail_rl"
	   	android:layout_width="match_parent"
	   	android:layout_height="wrap_content"
	   	android:padding="5dp"
	   	android:background="#DDFFFFFF" >
	   	
        <TextView
	        android:id="@+id/register_title_tv"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="8dp"
	        android:gravity="center"
	        android:textSize="26sp"
	        android:textStyle="bold" 
	        android:text="@string/register_title_header" />

	    <TextView
	        android:id="@+id/register_email_tv"
	        android:layout_width="200dp"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/register_title_tv"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="20dp"
	        android:textSize="20sp"
	        android:gravity="center"
	        android:text="@string/user_email_header" />
	
	    <EditText
	        android:id="@+id/register_email_et"
	        android:layout_width="200dp"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/register_email_tv"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="10dp"
	        android:inputType="textEmailAddress" >
	
	    </EditText>
	    
	    <TextView
	        android:id="@+id/register_name_tv"
	        android:layout_width="200dp"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/register_email_et"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="10dp"
	        android:textSize="20sp"
	        android:gravity="center"
	        android:text="@string/user_name_header" />
	
	    <EditText
	        android:id="@+id/register_name_et"
	        android:layout_width="200dp"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/register_name_tv"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="10dp"
	        android:inputType="textPersonName" >
	
	    </EditText>
	    
	    <TextView
	        android:id="@+id/register_firstname_tv"
	        android:layout_width="200dp"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/register_name_et"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="10dp"
	        android:textSize="20sp"
	        android:gravity="center"
	        android:text="@string/user_firstname_header" />
	
	    <EditText
	        android:id="@+id/register_firstname_et"
	        android:layout_width="200dp"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/register_firstname_tv"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="10dp"
	        android:inputType="textPersonName" >
	
	    </EditText>
	
	    <TextView
	        android:id="@+id/register_password_tv"
	        android:layout_width="200dp"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/register_firstname_et"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="10dp"
	        android:textSize="20sp"
	        android:gravity="center"
	        android:text="@string/user_password_header" />
	
	    <EditText
	        android:id="@+id/register_password_et"
	        android:layout_width="200dp"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/register_password_tv"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="10dp"
	        android:inputType="textPassword" />
	    
	    <TextView
	        android:id="@+id/register_password_confirmation_tv"
	        android:layout_width="200dp"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/register_password_et"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="10dp"
	        android:textSize="20sp"
	        android:gravity="center"
	        android:text="@string/user_confirmation_header" />
	
	    <EditText
	        android:id="@+id/register_password_confirmation_et"
	        android:layout_width="200dp"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/register_password_confirmation_tv"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="10dp"
	        android:inputType="textPassword" />
	
	    <Button
	        android:id="@+id/register_b"
	        android:layout_width="120dp"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/register_password_confirmation_et"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="20dp"
	        android:textColor="#1B77B2"
	        android:text="@string/register_button" />
    
    </RelativeLayout>

</ScrollView>
